syntax = "proto3";

option go_package = ".;rpc";

package rpc;

service DHCP {
  rpc RentIP (RentIPRequest) returns (RentIPResponse) {}
  rpc ReleaseIP (ReleaseIPRequest) returns (ReleaseIPResponse) {}
}

message RentIPRequest {
  string PodName = 1;
  string PodNamespace = 2;
}

message RentIPResponse {
  string IPv4CIDR = 1;
  string IPv6CIDR = 2;
}

message ReleaseIPRequest {
  string PodName = 1;
  string PodNamespace = 2;
  string IPv4CIDR = 3;
  string IPv6CIDR = 4;
}
message ReleaseIPResponse {
  string message = 1;
}
